# VUT-IPK

./: CMakeLists.txt  README.md  docker-compose.yaml  pytest.ini
Project-1/: CHANGELOG.md  Makefile  README.md  ipkcpc  ipkcpc.cpp  ipkcpc.h  utils.cpp  utils.h
Project-2/: CHANGELOG.md  IOTA.cpp  IOTA.h  Makefile  README.md  TCPServer.cpp  TCPServer.h  UDPServer.cpp  UDPServer.h  server.cpp  server.h
Project-2/test_output/: output.txt
commits/commits-1/: message  utils.cpp  utils.h
commits/commits-10/: CMakeLists.txt  ipkcpc.cpp  ipkcpd.cpp  message
commits/commits-11/: message
commits/commits-2/: Makefile  ipkcpc.cpp  ipkcpc.h  message
commits/commits-3/: ipkcpc.cpp  ipkcpc.h  message
commits/commits-4/: ipkcpc.cpp
commits/commits-5/: README.md  ipkcpc.cpp  ipkcpc.h  message
commits/commits-6/: Makefile  ipkcpd.cpp  ipkcpd.h  message
ipkpd/: Dockerfile  start.sh
ipkpd/Devenv/: c.nix  clisp.nix  csharp.nix  flake.nix
ipkpd/Stubs/clisp/: README.md
ipkpd/Stubs/cpp/: Makefile  README.md
ipkpd/Stubs/cpp/DemoTcp/: client  (+4 more)
ipkpd/Stubs/cs/: README.md
src/: Makefile  README.md  client  client.cpp  client2.cpp  ipkcpc.cpp  ipkcpc.h  ipkcpd.cpp  ipkcpd.h  server.cpp  test  utils.cpp  utils.h
tests/: conftest.py  requirements.txt  utility.py
tests/client/: test_bad_args.py  test_bad_handshake.py  test_clear_termination.py  test_no_args.py  test_not_enough_args.py
tests/server/: test_bad_args.py  test_clear_termination.py  test_no_args.py
tests/shared/: test_tcp_communication.py  test_udp_communication.py  udp_spammer.py
tests/shared/tcp_tests/: tcp_spammer.py  test_tcp_communication.py  test_tcp_correct_handshake.py  test_tcp_correct_queries.py  test_tcp_division_by_zero.py  test_tcp_malformed_queries.py  test_tcp_multiple_queries_one_send.py  test_tcp_query_in_more_messages.py  test_tcp_too_many_spaces.py
tests/shared/udp_tests/: test_udp_communication.py  test_udp_correct_queries.py  test_udp_division_by_zero.py  test_udp_malformed_queries.py  test_udp_too_many_spaces.py  udp_spammer.py
(+19 files in other folders)
